--- a/catch.html
+++ b/catch.html
@@ -31,21 +31,20 @@
 <!-- Top Menu -->
       <div class="custom-menu-wrapper">
           <div class="pure-menu custom-menu custom-menu-top">
-              <a href="#" class="pure-menu-heading custom-menu-brand">C<i class="fa fa-bolt" aria-hidden="true"></i>L</a>
+              <a href="index.html" class="pure-menu-heading custom-menu-brand">C<i class="fa fa-bolt" aria-hidden="true"></i>L</a>
               <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
           </div>
           <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
               <div class="custom-menu-screen"></div>
               <ul class="pure-menu-list">
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">ClickMe</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">Didabo</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">KIKINOTE</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">NYNDesignLab</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">TMStudio</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">MerciAli!</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link activetopbtn">CATCH</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">58管家</a></li>
-                  <li class="pure-menu-item"><a href="#" class="pure-menu-link">BA!</a></li>
+                  <li class="pure-menu-item"><a href="clickme.html" class="pure-menu-link">ClickMe</a></li>
+                  <li class="pure-menu-item"><a href="didabo.html" class="pure-menu-link">Didabo</a></li>
+                  <li class="pure-menu-item"><a href="kikinote.html" class="pure-menu-link">KIKINOTE</a></li>
+                  <li class="pure-menu-item"><a href="nyndesignlab.html" class="pure-menu-link">NYNDesignLab</a></li>
+                  <li class="pure-menu-item"><a href="TMS.html" class="pure-menu-link">TMStudio</a></li>
+                  <li class="pure-menu-item"><a href="merciali.html" class="pure-menu-link">MerciAli!</a></li>
+                  <li class="pure-menu-item"><a href="catch.html" class="pure-menu-link activetopbtn">CATCH</a></li>
+                  <li class="pure-menu-item"><a href="logo.html" class="pure-menu-link">Logo Selection</a></li>
                   
               </ul>
           </div>
