--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 			<div class="container-sidebar">
 				<div class="header">
 					<div class="pic">
-						<!--<img class="pure-img" src="IMG/pp.png">-->
+					<img class="pure-img" src="IMG/pp.png">
 					</div>
 					<!--<div class="title">Celia Lerandy</div>-->
 					<div class="title" style="font-size: 20px;">Celia Lerandy</div>
 					<div class="desc">Front-End Dev and Designer with a mix of technical, design and business skills. Taiwan-Based.</div>
 					<div class="social">
 						<ul>
-							<li><a href=""><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-							<li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-							<li><a href=""><i style="display: inline-block; font-family: 'Montserrat', sans-serif; font-style: normal;">.pdf <span style="font-weight: bold;">CV</span></i></a></li>
+							<li><a href="mailto:celialrnd@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+							<li><a href="www.linkedin.com/in/celialerandy"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="celialerandy.pdf"><i style="display: inline-block; font-family: 'Montserrat', sans-serif; font-style: normal;">.pdf <span style="font-weight: bold;">CV</span></i></a></li>
 						</ul>
 					</div>
 				</div>
