--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<div class="project-desc">MerciAli! is a french website helping Aliexpress customers find the best products. </div>
 							<div class="project-btn">
 								<div class="btn-case"><a href="merciali.html">Read More</a></div>
-								<div class="btn-web"><a target="_blank" href="merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
+								<div class="btn-web"><a target="_blank" href="https://www.merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
 
