--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="social">
 						<ul>
 							<li><a href="mailto:celialrnd@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
-							<li><a href="www.linkedin.com/in/celialerandy"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="http://www.linkedin.com/in/celialerandy"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 							<li><a href="celialerandy.pdf"><i style="display: inline-block; font-family: 'Montserrat', sans-serif; font-style: normal;">.pdf <span style="font-weight: bold;">CV</span></i></a></li>
 						</ul>
 					</div>
@@ -197,7 +197,7 @@
 							<div class="project-desc">MerciAli! is a french website helping Aliexpress customers find the best products. </div>
 							<div class="project-btn">
 								<div class="btn-case"><a href="merciali.html">Read More</a></div>
-								<div class="btn-web"><a target="_blank" href="https://www.merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
+								<div class="btn-web"><a target="_blank" href="https://merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
 
