--- a/didabo.html
+++ b/didabo.html
@@ -62,6 +62,7 @@
     <div class="pure-u-1 pure-u-md-24-24 project-page-title-container">
       <h1 class="project-page-title">Didabo嘀嗒播</h1>
       <div class="project-page-subtitle">HTML5, CSS3, JS, Adaptive</div>
+      <div class="btn-web"><a target="_blank" href="http://www.didabo.com/"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
     </div>
 </div>
 <div class="pure-g project-page-content-marge">
