--- a/merciali.html
+++ b/merciali.html
@@ -62,7 +62,7 @@
     <div class="pure-u-1 pure-u-md-24-24 project-page-title-container">
       <h1 class="project-page-title">MerciAli!</h1>
       <div class="project-page-subtitle">Creative Direction, Brand Identity, Social Content Creation and Management, front-end developpement</div>
-      <div class="btn-web"><a target="_blank" href="merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
+      <div class="btn-web"><a target="_blank" href="https://merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div></i> Go to website</a></div>
     </div>
 </div>
 <div class="pure-g project-page-content-marge">
