--- a/nyndesignlab.html
+++ b/nyndesignlab.html
@@ -61,6 +61,7 @@
     <div class="pure-u-1 pure-u-md-24-24 project-page-title-container">
       <h1 class="project-page-title">NYNDesignLab</h1>
       <div class="project-page-subtitle">HTML5, CSS3, JS, Responsive</div>
+      <div class="btn-web"><a target="_blank" href="http://www.NYNDesignLab.com/"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
     </div>
 </div>
 <div class="pure-g project-page-content-marge">
