--- a/clickme.html
+++ b/clickme.html
@@ -176,15 +176,15 @@
 
 
 <div class="pure-g page-img">
-  <div class="pure-u-1 pure-u-md-18-24 nav-img">
-    <img class="pure-img" src="IMG/CM/nav.png">
-  </div>
-  <div class="pure-u-1 pure-u-md-6-24 phone-img">
-    <img class="pure-img" src="IMG/CM/phone.gif">
+  <div class="pure-u-1 pure-u-md-24-24 nav-img">
+    <img class="pure-img" src="IMG/CM/CMphonedesk.gif">
   </div>
 </div>
+
+
+
 <div class="pure-g page-img2">
-  <div class="pure-u-1 pure-u-md-6-24 map-img">
+  <div class="pure-u-1 pure-u-md-10-24 map-img">
     <div class="project-element-title">Mobile App Overall Screens Details (Dark/Light versions) :</div>
       <div class="element-content-list">
         <ul>
@@ -206,7 +206,7 @@
         </ul>
     </div>
 </div> 
-<div class="pure-u-1 pure-u-md-18-24 map-img">
+<div class="pure-u-1 pure-u-md-14-24 map-img">
 <img src="IMG/CM/dark.png" 
     onmouseover="this.src='IMG/CM/light.png'"
     onmouseout="this.src='IMG/CM/dark.png'"
