--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</div>
 							<div class="project-desc">ClickMe is an entertainment media (website + ios and android app) for viral content with a focus on lifestyle, Anime/Video Game and sexy content.</div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="clickme.html">Read More</a></div>
+								<div class="btn-case"><a href="clickme.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href="http://www.clickme.net/"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -99,7 +99,7 @@
 							</div>
 							<div class="project-desc">Didabo.com is the first chinese content aggregation platform for live videos of people playing games. </div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="didabo.html">Read More</a></div>
+								<div class="btn-case"><a href="didabo.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href="http://www.didabo.com/"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -125,7 +125,7 @@
 							</div>
 							<div class="project-desc">Kikinote is a magazine website with a focus on geek, IT, application and video game content.</div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="kikinote.html">Read More</a></div>
+								<div class="btn-case"><a href="kikinote.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href=""><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -149,7 +149,7 @@
 							</div>
 							<div class="project-desc">NYNDesignLab is a portfolio website for a professionnal product designer to showcase his work.</div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="nyndesignlab.html">Read More</a></div>
+								<div class="btn-case"><a href="nyndesignlab.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href="http://www.NYNDesignLab.com/"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -171,7 +171,7 @@
 							</div>
 							<div class="project-desc">TMStudio is a landing page for a Taichung based interior design agency. </div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="TMS.html">Read More</a></div>
+								<div class="btn-case"><a href="TMS.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href=""><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -196,7 +196,7 @@
 							</div>
 							<div class="project-desc">MerciAli! is a french website helping Aliexpress customers find the best products. </div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="merciali.html">Read More</a></div>
+								<div class="btn-case"><a href="merciali.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 								<div class="btn-web"><a target="_blank" href="https://merciali.com"><i class="fa fa-play" aria-hidden="true">   </i> Go to website</a></div>
 							</div>
 						</div>
@@ -219,7 +219,7 @@
 							</div>
 							<div class="project-desc">CATCH is a concept app helping users gain time ordering their meal in advance. </div>
 							<div class="project-btn">
-								<div class="btn-case"><a href="catch.html">Read More</a></div>
+								<div class="btn-case"><a href="catch.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 							</div>
 						</div>
 
@@ -240,7 +240,7 @@
 							</div>
 							<div class="project-desc">A selection of recent logo design projects.</div>
 														<div class="project-btn">
-								<div class="btn-case"><a href="logo.html">Read More</a></div>
+								<div class="btn-case"><a href="logo.html"><i class="fa fa-plus" aria-hidden="true"></i> Read More</a></div>
 							</div>
 						</div>
 
