--- a/clickme.html
+++ b/clickme.html
@@ -206,7 +206,7 @@
         </ul>
     </div>
 </div> 
-<div class="pure-u-1 pure-u-md-14-24 map-img">
+<div class="pure-u-1 pure-u-md-14-24 map-img" style="padding: 10px;">
 <img src="IMG/CM/dark.png" 
     onmouseover="this.src='IMG/CM/light.png'"
     onmouseout="this.src='IMG/CM/dark.png'"
