--- a/clickme.html
+++ b/clickme.html
@@ -206,8 +206,8 @@
         </ul>
     </div>
 </div> 
-<div class="pure-u-1 pure-u-md-14-24 map-img" style="padding: 10px;">
-<img src="IMG/CM/dark.png" 
+<div class="pure-u-1 pure-u-md-14-24 map-img">
+<img class="pure-img" src="IMG/CM/dark.png" 
     onmouseover="this.src='IMG/CM/light.png'"
     onmouseout="this.src='IMG/CM/dark.png'"
     border="0" alt=""/>
