--- a/TMS.html
+++ b/TMS.html
@@ -115,27 +115,14 @@
 </div>
 
 
-
-<!--
-<div class="pure-g main-img">
-    <img class="pure-img" src="IMG/CM/nav.jpg">
 </div>
-<div class="pure-g phone-content">
-  <div class="pure-u-1 pure-u-md-6-24 phone-img">
-    <img class="pure-img" src="IMG/CM/phoneanim.gif">
-  </div>
-  <div class="pure-u-1 pure-u-md-9-24 light-img">
-    <img class="pure-img" src="IMG/CM/light.png">
-  </div>
-  <div class="pure-u-1 pure-u-md-9-24 dark-img">
-    <img class="pure-img" src="IMG/CM/dark.png">
-  </div>
-</div>
--->
 
 
-
-</div>
+          <section class="footer">
+            <div class="footer-content">
+              Front-End Dev + Design portfolio - Designed and built by Celia Lerandy with <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            </div>
+          </section>
 
 <script>
       (function (window, document) {
