--- a/merciali.html
+++ b/merciali.html
@@ -144,7 +144,11 @@
 
 
 </div>
-
+          <section class="footer">
+            <div class="footer-content">
+              Front-End Dev + Design portfolio - Designed and built by Celia Lerandy with <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+            </div>
+          </section>
 <script>
       (function (window, document) {
       document.getElementById('toggle').addEventListener('click', function (e) {
